adaptive_all_sections

--- a/src/sass/_description.sass
+++ b/src/sass/_description.sass
@@ -1,12 +1,12 @@
 .description
-    padding: 50px 0
+    padding: 50px 0 30px 0
     padding-bottom: 30px
     height: auto
     &__subtitle
         text-align: center
     &__block
         background-color: #e5dfdc
-        border-radius: 20px
+        border-radius: 10px
         display: flex
         justify-content: space-between
         margin-top: 25px
@@ -20,8 +20,7 @@
             border: 1px dashed #fc7979
             align-items: center
             span
-                font-size: 50px
-             
+                font-size: 50px             
         &__desc
             width: 65%
             display: flex
@@ -34,6 +33,7 @@
                 text-align: justify
                 font-size: 17px
                 margin-top: 10px
-                color: #2e2e2e    
+                color: #2e2e2e
+                font-weight: 300    
 
             
