--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -37,6 +37,7 @@ $text_color: #1c1c1c
     margin: 0px
     box-sizing: border-box
     color: $text_color
+    font-weight: normal
 
 h1        
     font-size: 65px   
