--- a/src/sass/_media_sm_md.sass
+++ b/src/sass/_media_sm_md.sass
@@ -96,6 +96,9 @@
         div.row
             width: 100%
             margin: 0 auto
+            div.slider__title
+                h3
+                    font-size: 22px
             div.slider__content__wrapper
                 .slider__content__block
                     align-items: flex-start
@@ -220,9 +223,12 @@
 
     div.slider
         div.row
-            padding-top: 10px
+            padding-top: 0px
             width: 100%
             margin: 0 auto
+            div.slider__title
+                h3
+                    font-size: 21px
             div.slider__content__wrapper
                 position: relative
                 div.slider__content__block
@@ -364,10 +370,9 @@
             .btn.btn-callback
                 height: 30px        
                 
-
     section.description
         padding: 25px 0
-        &__subtitle h2
+        .description__subtitle h2
             font-size: 26px
         .description__block
             align-items: center
@@ -387,7 +392,9 @@
 
     div.slider
         div.row
-            padding-top: 45px
+            div.slider__title
+                h3
+                    font-size: 20px
             div.slider__content__wrapper
                 position: relative
                 div.slider__content__block
@@ -529,6 +536,9 @@
         div.row
             width: 100%
             margin: 0 auto
+            div.slider__title
+                h3
+                    font-size: 18px
             div.slider__content__wrapper
                 position: relative
                 div.slider__content__block
@@ -549,11 +559,11 @@
                 button.slick-prev
                     left: 5px
                     top: 25%
-                    transform: translateY(-50%)
+                    transform: translateY(-25%)
                 button.slick-next
                     right: 5px
                     top: 25%
-                    transform: translateY(-50%)
+                    transform: translateY(-25%)
                 span.features    
                    font-size: 24px
 
