--- a/src/sass/_ordering.sass
+++ b/src/sass/_ordering.sass
@@ -1,8 +1,9 @@
-.ordering
+section.ordering
     padding: 25px 0px 25px 0px
     h3 
-    @include title
-    text-align: center
+        @include title
+        text-align: center
+        padding-bottom: 25px
     .container
         padding: 0px
         div.ordering__wrapper
