--- a/src/sass/_media_sm_md.sass
+++ b/src/sass/_media_sm_md.sass
@@ -132,7 +132,7 @@
         .bg_header
             height: 450px
         div.row
-            padding-top: 40px
+            padding-top: 15px
             .menu
                 flex-direction: column
                 align-items: center
@@ -304,7 +304,7 @@
         .header__subtitle h2
             font-size: 26px     
         div.row
-            padding-top: 40px
+            padding-top: 10px
             nav.menu
                 flex-direction: column
                 align-items: center
@@ -314,7 +314,7 @@
                 left: -100%
                 background-color: rgba(0, 0, 0, .75)
                 width: 55%
-                height: 65vh
+                height: 80vh
                 transition: 1s all
                 &_active
                     left: 10px
@@ -326,13 +326,19 @@
                 flex-direction: row
                 align-items: center
                 justify-content: space-around
+                padding-right: 0px
                 .header__callback__link
                     margin-top: 0px
-                    font-size: 15px
+                    font-size: 17px
                     font-weight: 500
                 .header__callback__desc
-                    font-size: 15px
-                    font-weight: 500           
+                    font-size: 17px
+                    font-weight: 500 
+            .header__btn
+                padding: 0px
+                .btn.btn-callback
+                    height: 36px
+                                                        
         div.header__burger
             display: block
             position: fixed
@@ -355,21 +361,7 @@
         //             display: none
         //         &:nth-last-child(3)
         //             transform: rotate(-45deg)
-        .header__callback
-            padding: 0px            
-            div.header__callback__desc
-                font-size: 18px
-                text-align: center 
-            a.header__callback__link
-                font-size: 18px
-                font-weight: 500
-                text-align: center
-        .header__btn
-            padding: 0px
-            align-items: flex-start    
-            .btn.btn-callback
-                height: 30px        
-                
+                          
     section.description
         padding: 25px 0
         .description__subtitle h2
@@ -467,12 +459,10 @@
         .bg_header
             height: 350px
         div.row
-            padding-top: 35px
+            padding-top: 15px
             nav.menu
                 justify-content: center
-                height: 50
-                
-                vh
+                height: 50vh
                 width: 60%
                 a.menu__link
                     font-size: 15px
@@ -492,7 +482,7 @@
                     text-align: center
                     font-weight: 700
                 a.header__callback__link
-                    font-size: 15px
+                    font-size: 14px
                     font-weight: 700
                     text-align: center
                     padding: 0px
@@ -502,7 +492,7 @@
                 align-items: flex-start    
                 .btn.btn-callback
                     font-size: 11px
-                    height: 30px
+                    height: 36px
         .header__title
             margin-top: 30px
             h1
@@ -512,8 +502,8 @@
             h2
                 font-size: 20px
 
-    .description
-        &__subtitle h2
+    section.description
+        .description__subtitle h2
             font-size: 20px
         div.description__block
             flex-direction: column
