--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -27,7 +27,8 @@
 // Cоздание  ПЕРЕМЕННЫХ! основных цветов проекта   
 
 $head-color: #ec644b
-$text_color: #1c1c1c    
+$text_color: #1c1c1c
+$bg_color: #e5dfdc    
 
 // Задание генеральных свойств структуры и блоков        
     
