--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -19,14 +19,15 @@ header
         .menu__link
             text-decoration: none
             display: block
-            border-right: 2px #000 solid
+            border-right: none
             padding-right: 4px
-            font-size: 17px
+            font-size: 18px
             text-transform: uppercase
             transition: 0.5s all
             color: $head-color
             &:hover
                 font-size: 18px
+                color: $text-color
             &:nth-child(6)
                 border-right: none
     .header__burger
@@ -62,8 +63,6 @@ header
         text-align: center
         margin-top: 50px
         text-decoration:     
-    .header__burger
-        display: none
     .bg_header
         position: absolute
         top: 0px
