--- a/src/sass/_ordering.sass
+++ b/src/sass/_ordering.sass
@@ -1,5 +1,5 @@
 section.ordering
-    padding: 25px 0px 25px 0px
+    padding: 25px 0px 0px 0px
     h3 
         @include title
         text-align: center
@@ -7,10 +7,11 @@ section.ordering
     .container
         padding: 0px
         div.ordering__wrapper
-            background-color:#e5dfdc
+            background-color: $bg_color
             width: 100%
             margin: 0 auto 25px auto
             padding-top: 25px
+            border-radius: 10px
             div.ordering__icon
                 width: 75px
                 height: 75px
@@ -48,7 +49,7 @@ section.ordering
                     width: 30%
                     transition: 0.3s all
                     &:hover
-                        background-color: #e5dfdc
+                        background-color: $bg_color
                         border: 1px dashed #d95252
                         color: #d95252
                         font-size: 19px
